frontend/src/styles/index.scss
@use "./reset.scss";
@use "./fonts.scss";
@use "./code.scss";
@use "./theme.scss";
@use "./animation.scss" as *;
@use "./util.scss" as *;

@use "./media.scss";
@use "./inbox.scss";
@use "./voice-debug.scss";

:root {
	font: 16px/1.3 var(--font-default);
	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	color: $fg-100;
	background-color: $bg-100;
}

::selection {
	background-color: #3fa9c988;
}

#root {
	display: grid;
	grid-template-areas:
		"nav2 nav header header" "nav2 nav main sidebar" "tray tray main sidebar" "footer footer footer footer";
	grid-template-rows: auto 1fr auto auto;
	grid-template-columns: auto auto 1fr auto;
	height: 100vh;
	background-color: $bg-200;
	color: $fg-200;
}

#root > nav {
	grid-area: nav;
	width: 16rem;
	background-color: $bg-150;
	color: $fg-200;
	overflow-y: auto;
	display: flex;
	flex-direction: column;
	scrollbar-width: none;

	& > header {
		z-index: 1;
	}

	& > ul {
		padding-top: 8px;
		padding-bottom: 240px;
		display: flex;
		flex-direction: column;
	}

	& li {
		margin-top: 0.025rem;
	}

	& a {
		@include truncate;
		display: block;
		width: 100%;
		padding: 2px 8px;
		background-color: none;
		text-decoration: none;
		white-space: nowrap;
		color: $fg-400;

		&.active {
			background-color: $bg-300;
		}

		&:hover,
		&:focus {
			background-color: $bg-400;
		}

		&.closed {
			color: $sep-500;
		}
	}

	& header {
		/* TODO: make this its own root grid section */
		position: sticky;
		top: 0;
		background: $bg-100;
		padding: 8px 16px;
		border-bottom: solid $sep-300 1px;
	}
}

#nav li {
	padding: 0 8px;

	&.dragging {
		opacity: 0.5;
	}

	&.unread {
		font-weight: bold;
		color: $fg-200;
		position: relative;
		padding: 4px;
		cursor: pointer;

		&::before {
			position: absolute;
			top: 10%;
			left: 0;
			content: "";
			border-left: solid $sep-500 3px;
			height: 80%;
		}
	}
}

button,
input[type="submit"] {
	background-color: $bg-300;
	cursor: pointer;
	padding: 2px 4px;
	border: solid $sep-500 1px;

	&:hover,
	&:focus {
		background-color: $bg-400;
	}
}

.home {
	grid-area: main;
	background-color: $bg-200;
	color: $fg-200;
	padding: 1rem;
	overflow-y: auto;

	& button {
		margin: 2px 0;
	}
}

.room-home {
	grid-area: main;
	background-color: $bg-200;
	color: $fg-200;
	padding: 1rem;
	overflow-y: auto;

	& .thread {
		contain: content;
		background-color: $bg-300;
		margin: 8px 0;
		border: solid 1px $sep-400;
		border-radius: 4px;
		max-width: 800px;

		& > header {
			display: flex;
			flex-direction: column;
			padding: 4px 8px;
			cursor: pointer;

			& > .top {
				display: flex;
				align-items: center;
				gap: 8px;

				& > .icon {
					background-color: $bg-400;
					height: 16px;
					width: 16px;
					border-radius: 50%;
				}

				& > .spacer {
					@include truncate;
					flex: 1;
				}

				& > .time {
					color: $fg-500;
				}
			}

			.description {
				margin-top: 8px;
			}
		}

		& > .preview > details {
			padding: 0.25rem;
			cursor: pointer;
			appearance: details;
		}

		& > footer {
			cursor: pointer;
			text-align: center;
		}
	}

	& .thread-filter {
		border: solid $sep-500 1px;
		border-radius: 4px;
		overflow: hidden;

		& button {
			border: none;

			&.selected {
				background: $bg-150;
			}

			&:hover {
				background: $bg-200;
			}

			&.selected:hover {
				background: $bg-100;
			}
		}
	}
}

.chat {
	grid-area: main;
	background-color: $bg-200;
	color: $fg-200;
	display: grid;
	grid-template-rows: 1fr auto;
	contain: strict;
	scrollbar-color: $bg-300 $bg-150;
	scrollbar-gutter: stable;

	& > .list {
		display: flex;
		flex-direction: column;
		overflow-y: auto;

		& > .header {
			flex: 1;
			display: flex;
			justify-content: end;
			flex-direction: column;
		}

		& > .header > header {
			padding: 0 8px;
			margin-top: 32px;
			margin-bottom: 16px;
			box-shadow: 0 2px 8px $bg-200;
		}

		& > li {
			display: grid;
			grid-template-columns: 128px 1fr max-content;

			&.message {
				grid-template-columns: 1fr;
			}

			&:not(.message) {
				overflow-anchor: none;
			}

			&.selected {
				box-shadow: 4px 0 0 -1px inset #67dc82;
				background-color: #67dc8222;
			}

			&.context {
				box-shadow: 4px 0 0 -1px inset #cc1856;
				background-color: #cc185622;
			}

			&.mentioned {
				box-shadow: 4px 0 0 -1px inset $link-500;
				background-color: oklch(var(--color-link-500) / 0.1);
			}
		}
	}

	& > .loading {
		position: absolute;
		top: 8px;
		left: 8px;
		padding: 8px;
		background: $bg-100;
		z-index: 100;
	}

	& .spacer.mini {
		min-height: 3.5rem;
	}

	&.has-typing .spacer.mini {
		min-height: 4.5rem;
	}
}
/* ... */

